--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
   <title>NightTimeWordle</title>
 
 </head>
-<body>
+<body><div id="title">
+  <h1>NightTimeWordle</h1>
+</div>
+<br>
+<br>
   <div id="PlayAudio">
     <audio id="audio"></audio>
 	<a href="#" class="a button" id="PlayAudio" type="button" onclick="playNextSong()" >Play Music</a>
