--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <audio id="audio"></audio>
 	<a href="#" class="a button" id="PlayAudio" type="button" onclick="playNextSong()" >Play Music</a>
 </div>
+
   <div class="alert-container" data-alert-container></div>
   <div data-guess-grid class="guess-grid">
     <div class="tile"></div>
@@ -88,5 +89,7 @@
       </svg>
     </button>
   </div>
+<a>Made by Tristen Deweese.</a>
 </body>
+
 </html>
