--- a/index.html
+++ b/index.html
@@ -90,7 +90,10 @@
       </svg>
     </button>
   </div>
-<a>Made by Tristen Deweese.</a>
+  <div id="playAgainbutton">
+      <a class="PlayAgain" onclick="PlayAgain()">Play Again</a>
+  </div>
+<a href="https://github.com/Knotzer">Made by Tristen Deweese.</a>
 </body>
 
 </html>
